--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,4 +1,5 @@
 {% extends "base.html.twig" %}
+{% block title %}Welcome!{% endblock %}
 {% block body %}
     <h1>{{ bienvenue }}</h1>
 {% endblock %}
