--- a/templates/wild/index.html.twig
+++ b/templates/wild/index.html.twig
@@ -1,10 +1,6 @@
-<!doctype html>
-<html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <title>Document</title>
-</head>
-<body>
+{% extends "base.html.twig" %}
+{% block title %}Document{% endblock %}
+{% block body %}
     <h1>{{ website }} index</h1>
-</body>
-</html>
+{% endblock %}
+{% block javascripts %}{% endblock %}
