--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-light bg-light">
   <form class="form-inline">
-    <a class="btn btn-outline-success" type="button" href="/">Accueil</a>
-    <a class="btn btn-outline-success" type="button" href="/wild">Wild Series</a>
+    <a class="btn btn-outline-warning" type="button" href="/">Accueil</a>
+    <a class="btn btn-outline-warning" type="button" href="/wild">Wild Series</a>
   </form>
 </nav>
