--- a/templates/wild/show.html.twig
+++ b/templates/wild/show.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
-{% block title %}Welcome!{% endblock %}
+{% block title %}wild/show{% endblock %}
 {% block body %}
-    <h1>{{ bienvenue }}</h1>
+    <h1>New slug: {{ slug }}.</h1>
 {% endblock %}
 {% block javascripts %}{% endblock %}
