--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -2,6 +2,6 @@
 $primary: magenta;
 $secondary: yellowgreen;
 // color body
-$body-bg: $primary;
+$body-bg: $secondary;
 // Bootstrap and its default variables
-@import "node_modules/bootstrap/scss/bootstrap";
+@import "~bootstrap/scss/bootstrap";
