--- a/templates/wild/index.html.twig
+++ b/templates/wild/index.html.twig
@@ -1,5 +1,5 @@
 {% extends "base.html.twig" %}
-{% block title %}Document{% endblock %}
+{% block title %}wild/index{% endblock %}
 {% block body %}
     <h1>{{ website }} index</h1>
 {% endblock %}
