--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -2,5 +2,6 @@
   <form class="form-inline">
     <a class="btn btn-outline-warning" type="button" href="/">Accueil</a>
     <a class="btn btn-outline-warning" type="button" href="/wild">Wild Series</a>
+    <a class="btn btn-outline-warning" type="button" href="/wild/show">Show slug</a>
   </form>
 </nav>
